# CosVis

./: .gitignore  .sync-exclude.lst  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: cmake.yml
data/: Full.cosmo.vtp.series  readme.txt
paraview_scripts/: mask_source.py  particle_real_position_filter.py  particle_type_filter.py  temperature_filter.py
python_scripts/: clusterFun.py  run_clustering.py
src/: main.cxx
src/app/: VisCos.cxx  VisCos.hpp
src/data/: Loader.cxx  Loader.h
src/helper/: helper.cxx  helper.hxx
src/interactive/: KeyPressEvents.cxx  KeyPressEvents.hxx  KeyPressInteractorStyle.cxx  KeyPressInteractorStyle.hxx  ResizeWindowCallback.cxx  ResizeWindowCallback.hxx  TimeSliderCallback.cxx  TimeSliderCallback.hxx
src/processing/: AssignClusterFilter.cxx  AssignClusterFilter.hxx  BaryonFilter.cxx  BaryonFilter.hxx  CalculateTemperatureFilter.cxx  CalculateTemperatureFilter.hxx  ParticleTypeFilter.cxx  ParticleTypeFilter.hxx  PointToPolyDataFilter.cxx  PointToPolyDataFilter.hxx  PolyDataToImageDataAlgorithm.cxx  PolyDataToImageDataAlgorithm.hxx  StarFilter.cxx  StarFilter.hxx
